--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
+
 body {
 	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff670f+0,ff670f+100;Orange+Flat+%231 */
-background: #ff670f; /* Old browsers */
-background: -moz-linear-gradient(left,  #ff670f 0%, #ff670f 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left,  #ff670f 0%,#ff670f 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right,  #ff670f 0%,#ff670f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff670f', endColorstr='#ff670f',GradientType=1 ); /* IE6-9 */
+/*background: #ff670f; /* Old browsers */
+/*background: -moz-linear-gradient(left,  #ff670f 0%, #ff670f 100%); /* FF3.6-15 */
+/*background: -webkit-linear-gradient(left,  #ff670f 0%,#ff670f 100%); /* Chrome10-25,Safari5.1-6 */
+/*background: linear-gradient(to right,  #ff670f 0%,#ff670f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff670f', endColorstr='#ff670f',GradientType=1 ); /* IE6-9 */ 
 
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+   /* font-family: 'Roboto', sans-serif;
+    font-size: 14px;*/
 }
 
-main {
+/*main {
 	background-color: #ffffff;
-}
+}*/
 
 header {
 	padding: 10px;
@@ -31,7 +32,7 @@ h1 {
 }
 
 
-
+/*
 .pippo {
 	color: green;
 }
@@ -39,7 +40,7 @@ h1 {
 p.pippo {
 	color: red;
 }
-
+*/
 
 a:hover {
 	text-decoration: none;
@@ -71,6 +72,11 @@ ul {
 	}
 }
 /* SELETTORI DI DISCENDENTI */
+
+.header li {
+	display: inline-block;
+	padding: 0 5px;
+} 
 
 .menu {
 	color: #fff;
@@ -215,3 +221,229 @@ footer .cuore {
 footer .caffe {
 	color: #624a2e;
 }
+
+
+/*da qua CSS di contattaci*/
+html {
+	font-family: 'Montserrat', Arial, sans-serif;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+  }
+  
+  body {
+	background: #9132a8;
+  }
+  
+  button {
+	overflow: visible;
+  }
+  
+  button, select {
+	text-transform: none;
+  }
+  
+  button, input, select, textarea {
+	color: #32a834;
+	font: inherit;
+	margin: 0;
+  }
+  
+  input {
+	line-height: normal;
+  }
+  
+  textarea {
+	overflow: auto;
+  }
+  
+  #container {
+	border: solid 3px #32a834;
+	max-width: 768px;
+	margin: 60px auto;
+	position: relative;
+  }
+  
+  form {
+	padding: 37.5px;
+	margin: 50px 0;
+  }
+  
+  h1 {
+	color: #32a834;
+	font-size: 32px;
+	font-weight: 700;
+	letter-spacing: 7px;
+	text-align: center;
+	text-transform: uppercase;
+  }
+  
+  .underline {
+	border-bottom: solid 2px #32a834;
+	margin: -0.512em auto;
+	width: 80px;
+  }
+  
+  .icon_wrapper {
+	margin: 50px auto 0;
+	width: 100%;
+  }
+  
+  .icon {
+	display: block;
+	fill: #474544;
+	height: 50px;
+	margin: 0 auto;
+	width: 50px;
+  }
+  
+  .email {
+	  float: right;
+	  width: 45%;
+  }
+  
+  input[type='text'], [type='email'], select, textarea {
+	  background: none;
+	border: none;
+	  border-bottom: solid 2px #32a834;
+	  color: #474544;
+	  font-size: 1.000em;
+	font-weight: 400;
+	letter-spacing: 1px;
+	  margin: 0em 0 1.875em 0;
+	  padding: 0 0 0.875em 0;
+	text-transform: uppercase;
+	  width: 100%;
+	  -webkit-box-sizing: border-box;
+	  -moz-box-sizing: border-box;
+	  -ms-box-sizing: border-box;
+	  -o-box-sizing: border-box;
+	  box-sizing: border-box;
+	  -webkit-transition: all 0.3s;
+	  -moz-transition: all 0.3s;
+	  -ms-transition: all 0.3s;
+	  -o-transition: all 0.3s;
+	  transition: all 0.3s;
+  }
+  
+  input[type='text']:focus, [type='email']:focus, textarea:focus {
+	  outline: none;
+	  padding: 0 0 0.875em 0;
+  }
+  
+  .message {
+	  float: none;
+  }
+  
+  .name {
+	  float: left;
+	  width: 45%;
+  }
+  
+  select {
+	background: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png') no-repeat right;
+	outline: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+  }
+  
+  select::-ms-expand {
+	display: none;
+  }
+  
+  .subject {
+	width: 100%;
+	color: #32a834;
+  }
+  
+  .telephone {
+	width: 100%;
+  }
+  
+  textarea {
+	  line-height: 150%;
+	  height: 150px;
+	  resize: none;
+	width: 100%;
+  }
+  
+  ::-webkit-input-placeholder {
+	  color: #32a834;
+  }
+  
+  :-moz-placeholder { 
+	  color: #32a834;
+	  opacity: 1;
+  }
+  
+  ::-moz-placeholder {
+	  color: #32a834;
+	  opacity: 1;
+  }
+  
+  :-ms-input-placeholder {
+	  color: #32a834;
+  }
+  
+  #form_button {
+	background: none;
+	border: solid 2px #32a834;
+	color: #32a834;
+	cursor: pointer;
+	display: inline-block;
+	font-family: 'Helvetica', Arial, sans-serif;
+	font-size: 0.875em;
+	font-weight: bold;
+	outline: none;
+	padding: 20px 35px;
+	text-transform: uppercase;
+	-webkit-transition: all 0.3s;
+	  -moz-transition: all 0.3s;
+	  -ms-transition: all 0.3s;
+	  -o-transition: all 0.3s;
+	  transition: all 0.3s;
+  }
+  
+  #form_button:hover {
+	background: #32a834;
+	color: #F2F3EB;
+  }
+  
+  @media screen and (max-width: 768px) {
+	#container {
+	  margin: 20px auto;
+	  width: 95%;
+	}
+  }
+  
+  @media screen and (max-width: 480px) {
+	h1 {
+	  font-size: 26px;
+	}
+	
+	.underline {
+	  width: 68px;
+	}
+	
+	#form_button {
+	  padding: 15px 25px;
+	}
+  }
+  
+  @media screen and (max-width: 420px) {
+	h1 {
+	  font-size: 18px;
+	}
+	
+	.icon {
+	  height: 35px;
+	  width: 35px;
+	}
+	
+	.underline {
+	  width: 53px;
+	}
+	
+	input[type='text'], [type='email'], select, textarea {
+	  font-size: 0.875em;
+	}
+  }
