--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,7 @@
 .gallery {
 	display: flex; 
 	flex-direction: row;
-	justify-content: flex-start;
+	justify-content: space-around;
 	flex-flow: row wrap;
 }
 
